--- a/manifest.json
+++ b/manifest.json
@@ -48,7 +48,8 @@
     "vtex.category-menu": "2.x",
     "vtex.store-link": "0.x",
     "vuitg.mega-menu": "0.x",
-    "vtex.store-image": "0.x"
+    "vtex.store-image": "0.x",
+    "vtex.store-newsletter": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
