--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,8 @@
     "vtex.store-link": "0.x",
     "vuitg.mega-menu": "0.x",
     "vtex.store-image": "0.x",
-    "vtex.store-newsletter": "1.x"
+    "vtex.store-newsletter": "1.x",
+    "vtex.condition-layout": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
