--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,13 @@
     "vuitg.mega-menu": "0.x",
     "vtex.store-image": "0.x",
     "vtex.store-newsletter": "1.x",
-    "vtex.condition-layout": "2.x"
+    "vtex.condition-layout": "2.x",
+    "vtex.product-customizer": "2.x",
+    "vtex.product-gifts": "0.x",
+    "vtex.modal-layout": "0.x",
+    "vtex.product-specifications": "1.x",
+    "vtex.product-price": "1.x",
+    "vtex.product-highlights": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
