[ADDED] Footer and updated styles in all components

--- a/store/blocks/desktop/components/Home/banner-cta-03.jsonc
+++ b/store/blocks/desktop/components/Home/banner-cta-03.jsonc
@@ -2,7 +2,8 @@
     "flex-layout.row#desktop__banner-cta-03": {
       "children": ["stack-layout#desktop__banner-cta-03"],
       "props": {
-        "blockClass": ["desktop__container--center"]
+        "blockClass": ["desktop__container--center"],
+        "marginBottom": 8
       }
     },
   
