--- a/store/blocks/desktop/components/Home/product-slider-boots.jsonc
+++ b/store/blocks/desktop/components/Home/product-slider-boots.jsonc
@@ -19,7 +19,8 @@
           "list-context.product-list#desktop__product-list-two"
         ],
       "props":{
-          "blockClass": "desktop__container--center"
+          "blockClass": "desktop__container--center",
+          "marginBottom": 10
       }
     }
   }
