--- a/store/blocks/desktop/components/Home/banner-cta-01.jsonc
+++ b/store/blocks/desktop/components/Home/banner-cta-01.jsonc
@@ -2,7 +2,8 @@
     "flex-layout.row#desktop__banner-cta-01": {
       "children": ["stack-layout#desktop__banner-cta-01"],
       "props": {
-        "blockClass": ["desktop__container--center"]
+        "blockClass": ["desktop__container--center"],
+        "marginBottom": 7
       }
     },
   
