--- a/store/blocks/desktop/components/Home/banner-cta-02.jsonc
+++ b/store/blocks/desktop/components/Home/banner-cta-02.jsonc
@@ -2,7 +2,8 @@
   "flex-layout.row#desktop__banner-cta-02": {
     "children": ["stack-layout#desktop__banner-cta-02"],
     "props": {
-      "blockClass": ["desktop__container--center"]
+      "blockClass": ["desktop__container--center"],
+      "marginBottom": 8
     }
   },
 
