--- a/store/blocks/desktop/components/Home/product-slider-sports.jsonc
+++ b/store/blocks/desktop/components/Home/product-slider-sports.jsonc
@@ -19,7 +19,8 @@
           "list-context.product-list#desktop__product-list-one"
         ],
       "props":{
-          "blockClass": "desktop__container--center"
+          "blockClass": "desktop__container--center",
+          "marginBottom": 7
       }
     }
   
