[ADDED] Page not found, order placed

--- a/store/blocks/desktop/components/Header/header-secondary.jsonc
+++ b/store/blocks/desktop/components/Header/header-secondary.jsonc
@@ -45,10 +45,15 @@
         }
     },
 
+   
+
     "search-bar":{
+      "blocks": ["autocomplete-result-list.v2"],
         "props":{
           "displayMode": "search-and-clear-buttons",
-          "placeholder": "Buscar por palabra, producto o categoría"
+          "placeholder": "Buscar por palabra, producto o categoría",
+          "openAutocompleteOnFocus": true
+
         }
       }
 }
