--- a/store/blocks/desktop/components/Home/grid-layout.jsonc
+++ b/store/blocks/desktop/components/Home/grid-layout.jsonc
@@ -116,7 +116,7 @@
             "blockClass": "grid__image",
             "src": "https://mla-s1-p.mlstatic.com/D_NQ_NP_611701-MLA48245272195_112021-OO.jpg",
             "link":{
-                "url": "https://www.google.com"
+                "url": "https://devjohansq--vuitg.myvtex.com/category"
             }
         }
     },
@@ -125,7 +125,7 @@
             "blockClass": "grid__image",
             "src": "https://mla-s2-p.mlstatic.com/D_NQ_NP_641359-MLA48245272284_112021-OO.jpg",
             "link":{
-                "url": "https://www.google.com"
+                "url": "https://devjohansq--vuitg.myvtex.com/category"
             }
         }
     },
@@ -134,7 +134,7 @@
             "blockClass": "grid__image",
             "src": "https://mla-s2-p.mlstatic.com/D_NQ_NP_667243-MLA48245279324_112021-OO.jpg",
             "link":{
-                "url": "https://www.google.com"
+                "url": "https://devjohansq--vuitg.myvtex.com/category"
             }
         }
     },
@@ -143,7 +143,7 @@
             "blockClass": "grid__image",
             "src": "https://mla-s1-p.mlstatic.com/D_NQ_NP_901347-MLA48245282325_112021-OO.jpg",
             "link":{
-                "url": "https://www.google.com"
+                "url": "https://devjohansq--vuitg.myvtex.com/category"
             }
         }
     }
