--- a/store/blocks/desktop/components/footer/components/01-footer/01-footer.jsonc
+++ b/store/blocks/desktop/components/footer/components/01-footer/01-footer.jsonc
@@ -19,7 +19,7 @@
   "logo#logo-desktop": {
     "props": {
       "title": "Logo Desktop",
-      "href": "https://www.google.com",
+      "href": "https://devjohansq--vuitg.myvtex.com/",
       "url": "https://mshopsoficiales.kubocloud.com/mx/croydon/logo-Crodon.png",
       "width": 190,
       "color": "orange"
