--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
     "vtex.modal-layout": "0.x",
     "vtex.product-specifications": "1.x",
     "vtex.product-price": "1.x",
-    "vtex.product-highlights": "2.x"
+    "vtex.product-highlights": "2.x",
+    "vtex.search": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
